--- a/voterid.html
+++ b/voterid.html
@@ -3,34 +3,34 @@
 <head>
     <title>Voter ID Card</title>
 </head>
-<body>
-
+<body bgcolor="blue">
+	<center>
 <h2>Voter ID Card Form</h2>
 
 <form>
-    Name:<br>
-    <input type="text" name="name"><br><br>
 
-    Father's Name:<br>
+    Name:
+    <input type="text" name="name"><br><br>
+    Father's Name:
     <input type="text" name="fname"><br><br>
 
-    Date of Birth:<br>
+    Date of Birth:
     <input type="date" name="dob"><br><br>
 
-    Gender:<br>
+    Gender:
     <input type="radio" name="gender"> Male
     <input type="radio" name="gender"> Female
     <br><br>
 
-    Voter ID Number:<br>
+    Voter ID Number:
     <input type="text" name="voterid"><br><br>
 
-    Address:<br>
+    Address:
     <textarea rows="3" cols="30"></textarea><br><br>
 
     <input type="submit" value="Submit">
 </form>
-
+</center>
 </body>
 </html>
 
