--- a/studentid.html
+++ b/studentid.html
@@ -3,8 +3,8 @@
 <head>
     <title>Student ID Card</title>
 </head>
-<body>
-
+<body bgcolor="lightblue">
+	<center>
 <h2>Student ID Card Form</h2>
 
 <form>
@@ -42,6 +42,7 @@
 
     <input type="submit" value="Generate ID Card">
 </form>
+</center>
 
 </body>
 </html>
